--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^1.3.0",
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -49,6 +51,6 @@
     "prettier": "^2.7.1",
     "sass": "^1.56.2",
     "tailwindcss": "^3.2.4",
-    "vite": "^2.6.14"
+    "vite": "^2.9.18"
   }
 }
