--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^1.3.0",
+    "antd": "^5.19.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "prop-types": "^15.8.1",
@@ -31,7 +32,7 @@
     "react-router-dom": "^6.5.0",
     "recoil": "^0.7.6",
     "zmp-sdk": "^2.27.1",
-    "zmp-ui": "^1.11.1"
+    "zmp-ui": "^1.11.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
