--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "joi": "^17.13.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
